[gd_scene load_steps=18 format=3 uid="uid://3s00a7q88gky"]

[ext_resource type="Theme" uid="uid://dbotcsipmht72" path="res://interface/main_theme.tres" id="1_8ojrk"]
[ext_resource type="Script" path="res://game.gd" id="1_oho4n"]
[ext_resource type="PackedScene" uid="uid://mv7gh2u28mg5" path="res://construction_mechanic/player_construction.tscn" id="1_wgv3v"]
[ext_resource type="FontFile" uid="uid://bart7fupiyr0l" path="res://resources/fonts/simply_mono_2/SimplyMono-BookOblique.ttf" id="3_cucsq"]
[ext_resource type="Script" path="res://interface/window.gd" id="3_mw1gv"]
[ext_resource type="PackedScene" uid="uid://bg8jt5dej20l1" path="res://path_mechanic/path_selection_screen.tscn" id="4_ko2fr"]
[ext_resource type="PackedScene" uid="uid://cwa2cv6lsgki6" path="res://settings/sound_setter.tscn" id="7_w24js"]
[ext_resource type="AudioStream" uid="uid://ch2eeymfycdmw" path="res://settings/scissors 8.wav" id="8_6kpa4"]
[ext_resource type="AudioStream" uid="uid://bxhndi1w6x38t" path="res://settings/scream 12.wav" id="9_g5p57"]

[sub_resource type="Gradient" id="Gradient_0pjls"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_64bat"]
gradient = SubResource("Gradient_0pjls")
width = 128
height = 4
fill_from = Vector2(0, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_gfmeh"]
interpolation_mode = 2
colors = PackedColorArray(0.801052, 0.400161, 1, 1, 0.75868, 0.685812, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fuyl8"]
gradient = SubResource("Gradient_gfmeh")
height = 720
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_uvmom"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Welcome:texture:fill_from")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Welcome:texture:gradient:colors")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Welcome/Label2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Welcome/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.4527, 0.451076, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Welcome:texture:fill_to")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.5)]
}

[sub_resource type="Animation" id="Animation_ayow3"]
resource_name = "loop"
length = 30.0
loop_mode = 1
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Welcome:texture:fill_from")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 9.2, 21),
"transitions": PackedFloat32Array(1, -2, -0.5),
"update": 2,
"values": [Vector2(0, 0.5), Vector2(0.5, 0), Vector2(0.4, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Welcome:texture:fill_to")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(7.83333),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Vector2(0.5, 1)]
}

[sub_resource type="Animation" id="Animation_rayii"]
resource_name = "new_animation"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Welcome:texture:fill_from")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0.5), Vector2(0, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Welcome:texture:gradient:colors")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.33333, 7.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1), PackedColorArray(0, 0, 0, 1, 7.7486e-07, 0.733861, 0.735921, 1), PackedColorArray(7.70092e-07, 0.733861, 0.735921, 1, 0.658824, 0.0784314, 0.439216, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Welcome/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 1.03333, 2.96667, 3.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0.97513, 0.867375, 0.970381, 0.87451), Color(1, 1, 1, 1), Color(0.4527, 0.451076, 0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(7.83333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Welcome/Label2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3.83333, 4.5, 6.76667, 7.53333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1), Color(0.827451, 0.737255, 0.988235, 0.898039), Color(0.70723, 0.522093, 0.979291, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Welcome:texture:fill_to")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7rh51"]
_data = {
"RESET": SubResource("Animation_uvmom"),
"loop": SubResource("Animation_ayow3"),
"new_animation": SubResource("Animation_rayii")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8ojrk")
script = ExtResource("1_oho4n")

[node name="Welcome" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_64bat")

[node name="Label" type="Label" parent="Welcome"]
modulate = Color(0.4527, 0.451076, 0, 0)
layout_mode = 0
offset_left = 143.0
offset_top = 215.0
offset_right = 1118.0
offset_bottom = 524.0
theme_override_colors/font_color = Color(0.528115, 0.998717, 1, 1)
theme_override_colors/font_shadow_color = Color(0.8, 0.458824, 0.8, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("3_cucsq")
theme_override_font_sizes/font_size = 128
text = "y o u  a r e
 a  B A L L"

[node name="Label2" type="Label" parent="Welcome"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 143.0
offset_top = 127.0
offset_right = 1118.0
offset_bottom = 588.0
theme_override_colors/font_color = Color(0.528115, 0.998717, 1, 1)
theme_override_colors/font_shadow_color = Color(0.8, 0.458824, 0.8, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = ExtResource("3_cucsq")
theme_override_font_sizes/font_size = 128
text = "a n d  y o u
 m u s t
    F A L L"

[node name="PanelTexture" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
texture = SubResource("GradientTexture2D_fuyl8")
expand_mode = 1
stretch_mode = 1

[node name="Layout" type="VBoxContainer" parent="PanelTexture"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[node name="SelectLevelButton" type="Button" parent="PanelTexture/Layout"]
visible = false
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
text = "s   l
e   e
l   v
e   e
c   l
t    "
autowrap_mode = 2

[node name="Control4" type="Control" parent="PanelTexture/Layout"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="GameWindowButton" type="Button" parent="PanelTexture/Layout"]
visible = false
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
text = "g   w
a   i
m   n
e   d
    o
    w"
autowrap_mode = 2

[node name="Control3" type="Control" parent="PanelTexture/Layout"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="HiddenWindowButton" type="Button" parent="PanelTexture/Layout"]
visible = false
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
text = "u   w
p   i
g   n
r   d
a   o
d   w
e    "
autowrap_mode = 2

[node name="Control" type="Control" parent="PanelTexture/Layout"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="OptionsWindowButton" type="Button" parent="PanelTexture/Layout"]
visible = false
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
text = "o
p
t
i
o
n
s"
autowrap_mode = 2

[node name="SelectLevel" type="Window" parent="."]
title = "select level"
position = Vector2i(90, 125)
size = Vector2i(380, 300)
visible = false
script = ExtResource("3_mw1gv")
tutorial_scene = NodePath("TutorialGoesHere")

[node name="PathSelectionScreen" parent="SelectLevel" instance=ExtResource("4_ko2fr")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialGoesHere" type="ColorRect" parent="SelectLevel"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.313726, 1, 1)

[node name="Label" type="Label" parent="SelectLevel/TutorialGoesHere"]
layout_mode = 0
offset_top = 60.0
offset_right = 306.0
offset_bottom = 83.0
text = "tutrial instruction geos here"

[node name="HiddenWindow" type="Window" parent="."]
auto_translate_mode = 1
title = "upgrade window"
position = Vector2i(520, 120)
size = Vector2i(720, 360)
visible = false
unresizable = true
script = ExtResource("3_mw1gv")
tutorial_scene = NodePath("TutorialWindow")

[node name="PlayerConstruction" parent="HiddenWindow" instance=ExtResource("1_wgv3v")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0

[node name="TutorialWindow" type="ColorRect" parent="HiddenWindow"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.729412, 0.839216, 1, 1)

[node name="Label" type="Label" parent="HiddenWindow/TutorialWindow"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 160.0
offset_top = 80.0
offset_right = 667.0
offset_bottom = 193.0
text = "you can upgrade yourself with parts

but you have to spend skill points to use parts

metamorphosis consumes parts

and allows you to invest skill points difrently"

[node name="GameWindow" type="Window" parent="."]
title = "game window"
position = Vector2i(400, 42)
size = Vector2i(640, 640)
visible = false
unresizable = true
script = ExtResource("3_mw1gv")
tutorial_scene = NodePath("TutorialGoesHere")

[node name="TutorialGoesHere" type="ColorRect" parent="GameWindow"]
visible = false
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.231373, 0.584314, 0.803922, 1)

[node name="Label" type="Label" parent="GameWindow/TutorialGoesHere"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "you are falling ball

press buttons to avoid stuff

or collect upgrades
"

[node name="CenterContainer" type="CenterContainer" parent="GameWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameWindow/CenterContainer"]
z_index = -1
layout_mode = 2
text = "N O
 S I G N A L"

[node name="OptionsWindow" type="Window" parent="."]
title = "options"
position = Vector2i(935, 407)
size = Vector2i(240, 240)
visible = false
script = ExtResource("3_mw1gv")
tutorial_scene = NodePath("TutorialIGuess")

[node name="Settings" type="ColorRect" parent="OptionsWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.278431, 0.337255, 1)

[node name="SoundSetter" parent="OptionsWindow/Settings" instance=ExtResource("7_w24js")]
layout_mode = 1
offset_top = -120.0
offset_right = 0.0
offset_bottom = -43.0
title_overwrite = "Sound"

[node name="SoundSetter2" parent="OptionsWindow/Settings" instance=ExtResource("7_w24js")]
layout_mode = 1
offset_top = -39.0
offset_right = 0.0
offset_bottom = 33.0
bus_name = "Effects"

[node name="ExampleSound" parent="OptionsWindow/Settings/SoundSetter2" index="1"]
stream = ExtResource("9_g5p57")

[node name="SoundSetter3" parent="OptionsWindow/Settings" instance=ExtResource("7_w24js")]
layout_mode = 1
offset_top = 40.0
offset_right = 0.0
offset_bottom = 112.0
bus_name = "Music"

[node name="ExampleSound" parent="OptionsWindow/Settings/SoundSetter3" index="1"]
stream = ExtResource("8_6kpa4")

[node name="TutorialIGuess" type="ColorRect" parent="OptionsWindow"]
visible = false
custom_minimum_size = Vector2(240, 240)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(4.23551e-06, 0.691915, 0.697463, 1)

[node name="Label" type="Label" parent="OptionsWindow/TutorialIGuess"]
layout_mode = 0
offset_left = 6.0
offset_top = 33.0
offset_right = 207.0
offset_bottom = 56.0
text = "change options here
"

[node name="StartAniamator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7rh51")
}
autoplay = "new_animation"

[connection signal="pressed" from="PanelTexture/Layout/SelectLevelButton" to="." method="_on_select_level_button_pressed"]
[connection signal="pressed" from="PanelTexture/Layout/GameWindowButton" to="." method="_on_game_window_button_pressed"]
[connection signal="pressed" from="PanelTexture/Layout/HiddenWindowButton" to="." method="_on_hidden_window_button_pressed"]
[connection signal="pressed" from="PanelTexture/Layout/OptionsWindowButton" to="." method="_on_options_window_button_pressed"]
[connection signal="create_new_level" from="SelectLevel/PathSelectionScreen" to="." method="_on_path_selection_screen_create_new_level"]

[editable path="OptionsWindow/Settings/SoundSetter2"]
[editable path="OptionsWindow/Settings/SoundSetter3"]
